--- a/01.介绍/Introduction.ipynb
+++ b/01.介绍/Introduction.ipynb
@@ -603,9 +603,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python(pytorch-cuda111)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-cuda111"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -617,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
