--- a/04. 几何变换/AffineTransformation.ipynb
+++ b/04. 几何变换/AffineTransformation.ipynb
@@ -734,9 +734,9 @@
    "hash": "eca498e910dd22253662641d0fd16f8e7325793442e0ac595e9db974b4611c50"
   },
   "kernelspec": {
-   "display_name": "Python(torch171)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "torch171"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -748,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
