--- a/02.点操作与直方图操作/点操作与直方图操作.ipynb
+++ b/02.点操作与直方图操作/点操作与直方图操作.ipynb
@@ -1036,9 +1036,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python(pytorch-cuda111)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch-cuda111"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1050,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
